--- a/ProyectoIntegrado/Front/index.html
+++ b/ProyectoIntegrado/Front/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <script src="https://use.fontawesome.com/3a5e7b9c96.js"></script>
+    <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
     <title>EDU DAM S.L.</title>
   </head>
   <body style="background-color: antiquewhite;">
